--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@ ul {
     padding: 16px;
     gap: 8px;
     list-style: none;
-
 }
+
 h1 {
   color: whitesmoke;
   text-align: center;
@@ -30,4 +30,8 @@ ul li a {
     border: 4px solid plum;
     border-radius: 4px;
 
+}
+
+ul li a:hover{
+  background: plum;
 }
