--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,25 @@
 body {
   font-family: Montserrat, sans-serif;
   background: palevioletred;
-
-
+  color: white;
+  line-height: 1.6;
 }
 
-ul {
+h1, h2, a {
+  color: whitesmoke;
+}
+
+h1 {
+  text-align: center;
+  font-size: 60px;
+  font-weight: 900;
+}
+
+h2 {
+  font-size: 30px;
+  font-weight: 600;
+}
+.main-nav {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,11 +29,7 @@ ul {
     list-style: none;
 }
 
-h1 {
-  color: whitesmoke;
-  text-align: center;
-}
-ul li a {
+ .main-nav li a {
     text-decoration: none;
     width: 60px;
     padding: 30px;
@@ -29,9 +39,21 @@ ul li a {
     font-weight: bold;
     border: 4px solid plum;
     border-radius: 4px;
-
 }
 
-ul li a:hover{
+.main-nav li a:hover{
   background: plum;
+}
+
+img {
+  margin: 1rem auto;
+  width: 50%;
+  height: 400px;
+  border-radius: 10px;
+  display: block;
+
+}
+.container {
+  margin: 0 auto;
+  width: 80%;
 }
