--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+/*   box sizing  */
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   font-family: Montserrat, sans-serif;
   background: palevioletred;
@@ -11,34 +21,34 @@ h1, h2, a {
 
 h1 {
   text-align: center;
-  font-size: 60px;
+  font-size: 3.75em;
   font-weight: 900;
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 1.875em;
   font-weight: 600;
 }
 .main-nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 140px;
-    padding: 16px;
-    gap: 8px;
+    height: 8.75em;
+    padding: 1em;
+    gap: 0.5em;
     list-style: none;
 }
 
  .main-nav li a {
     text-decoration: none;
-    width: 60px;
-    padding: 30px;
-    height: 30px;
+    width: 3.75em;
+    padding: 1.875em;
+    height: 1.875em;
     background: palevioletred;
     color: white;
     font-weight: bold;
-    border: 4px solid plum;
-    border-radius: 4px;
+    border: 0.25em solid plum;
+    border-radius: 0.25em;
 }
 
 .main-nav li a:hover{
@@ -46,10 +56,10 @@ h2 {
 }
 
 img {
-  margin: 1rem auto;
+  margin: 1em auto;
   width: 50%;
-  height: 400px;
-  border-radius: 10px;
+  height: 25em;
+  border-radius: 0.625em;
   display: block;
 
 }
@@ -57,3 +67,163 @@ img {
   margin: 0 auto;
   width: 80%;
 }
+
+.container.home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+
+}
+
+#footer{
+  text-align: center;
+}
+
+hr {
+  border: 0.125em solid plum;
+}
+
+.footer-delimiter {
+  text-align: center;
+}
+
+hr.footer-delimiter {
+  margin-top: 60vh;
+}
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding: 1rem 0;
+  align-items: center;
+}
+
+header h2 {
+  margin-right: auto;
+  margin-left: 2rem;
+}
+header h2 a {
+  text-decoration: none;
+  cursor: pointer;
+}
+.page-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding: 1rem 0;
+  align-items: center;
+}
+
+.page-nav-items {
+  list-style: none;
+   margin-right: 2rem;
+}
+
+.page-nav-items a {
+  text-decoration: none;
+  color: white;
+}
+
+.page-nav-items a:hover {
+  text-decoration: none;
+  background: plum;
+  padding: 0.9rem;
+  border-radius: 0.4rem;
+}
+button {
+  padding: 0.9rem;
+  border-radius: 0.4rem;
+  background: green;
+  color: white;
+  font-weight: 700;
+  border: 0 yellowgreen solid;
+}
+
+button:hover {
+  background: plum;
+}
+
+@media screen and (max-width: 912px) {
+  .main-nav {
+    flex-direction: column;
+    height: 500px
+}
+  .main-nav li {
+    flex: 1 1 auto;
+  }
+
+    h1 {
+      font-size: 2.75em;
+      font-weight: 700;
+    }
+
+  }
+  @media screen and (max-width: 480px){
+    .main-nav {
+      flex-direction: column;
+      height: 500px
+  }
+    .page-nav {
+      flex-direction: column;
+      align-items: center;
+    }
+    header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    header h2 {
+      margin-right: 0 auto;
+  
+    }
+
+    h1 {
+      font-size: 1.75em;
+      font-weight: 600;
+    }
+
+    h2 {
+      font-size: 1.55em;
+      font-weight: 400;
+    }
+
+    h3 {
+      font-size: 1.25em;
+      font-weight: 200;
+    }
+    img {
+      margin: 0 auto;
+      width: 90%;
+      border-radius: 0.425em;
+      display: block;
+    }
+    button {
+      padding: 0.45rem;
+      border-radius: 0.2rem;
+      font-weight: 400;
+    }
+  } 
+  
+  @media screen and (max-width: 360px){
+
+    .main-nav {
+      flex-wrap: wrap;
+    }
+     
+    .main nav li {
+      width: min-content;
+      height: 2rem;
+      text-align: center;
+
+    }
+    .main-nav li a {
+     padding: 0.5em;
+     border: 0.25em solid transparent;
+  }
+
+  }
+ 
+
